# 241-project

./: .formdt  README.md  main.ipynb  pyproject.toml
data/: SampleDataAAPL.xlsx  aapl.csv
